--- a/resumo.html
+++ b/resumo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Flashcards JP↔PT</title>
+  <title>Resumo - Flashcards JP↔PT</title>
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
@@ -17,9 +17,10 @@
     </nav>
   </header>
   <main>
-    <h1>Flashcards JP↔PT — Canvas</h1>
-    <p>Bem-vindo! Use o menu acima para navegar entre os modos.</p>
+    <h1>Resumo do dia</h1>
+    <ul id="stats"></ul>
   </main>
   <script src="js/main.js"></script>
+  <script src="js/resumo.js"></script>
 </body>
 </html>
