refactor: use single entrypoint for modules

--- a/index.html
+++ b/index.html
@@ -8,21 +8,6 @@
 </head>
 <body>
   <canvas id="app"></canvas>
-  <script type="module">
-    import "./js/utils.js";
-    import "./js/constants.js";
-    import "./js/date-utils.js";
-    import "./js/storage.js";
-    import "./js/srs.js";
-    import "./js/state.js";
-    import "./js/quiz.js";
-    import "./js/speech.js";
-    import "./js/canvas-helpers.js";
-    import "./js/layout.js";
-    import "./js/render.js";
-    import "./js/input-handlers.js";
-    import "./js/tests-smoke.js";
-    import "./js/main.js";
-  </script>
+  <script type="module" src="./js/main.js"></script>
 </body>
 </html>
