feat: add mobile touch support

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
   <canvas id="app"></canvas>
+  <!-- Input HTML invisível para mobile (abre o teclado) -->
+  <input id="mobileInput"
+         type="text"
+         inputmode="text"
+         autocomplete="off"
+         autocorrect="off"
+         autocapitalize="off"
+         spellcheck="false"
+         aria-label="Resposta" />
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
