feat: improve mobile input and responsive UI

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
   <canvas id="app"></canvas>
 
+  <textarea id="bulkTextarea"
+    autocomplete="off" autocapitalize="off" autocorrect="off" spellcheck="false"
+    style="position:fixed; left:-9999px; top:-9999px; width:1px; height:1px;
+           opacity:0.02; background:transparent; color:transparent; caret-color:#7ee7f3;
+           border:0; outline:0; z-index:12; pointer-events:auto;"></textarea>
+
   <!-- INPUT INVISÍVEL para abrir teclado no mobile -->
   <input id="mobileInput"
          type="text"
