Refactor mobile detection and overlay menu

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
          autocomplete="off"
          autocapitalize="off"
          autocorrect="off"
-         spellcheck="false"
-         style="position:fixed; left:-9999px; top:-9999px; width:1px; height:1px; opacity:0.02; background:transparent; color:transparent; caret-color:#7ee7f3; border:0; outline:0; z-index:10; pointer-events:auto;" />
+         spellcheck="false" />
   <script type="module" src="./js/main.js"></script>
 </body>
 </html>
